# Parallel_Programming

./: .gitignore  README.md  build_openCV341.sh  cnn.cpp  cnn_cuda.cu  cnn_kernel_wrapper.h  cnn_main.cpp  cnn_struct.cpp  darknet
Basic_Stuff/random/: rand  rand.c  readme.txt
Basic_Stuff/timer/: readme.txt  timer  timer.c
Compilers/: README.md
Compilers/00_compile_with_gcc/: compile.sh  main.cpp
Compilers/01_compile_with_Cmake_gcc/: CMakeCache.txt  CMakeLists.txt  sample
Compilers/02_compile_with_Cmake_intel/: main.cpp  readme.txt
Compilers/03_compile_openCV_cmake_gcc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Compilers/04_compile_openCV_with_cmake_intel_vtune/: Class.cpp  readme.txt
Compilers/10_compile_with_Cmake_intel _VTune_source/: CMakeLists.txt  main.cpp  readme.txt
Deep_Learning_Research/: Backprop Derivation.docx  readme.txt
Deep_Learning_Research/deep_reinforcement_learning/: Notes from Deep Reinforcement Learning.docx  ppo_results.txt  readme.txt
Deep_Learning_Research/mini_proj3/: main.py
Mobile_App/: eclipse_android_opencv_matlab.txt  readme.txt  svm.cpp
OpenCV/ORB/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenCVTrace-000.txt  OpenCVTrace.txt  cmake_install.cmake  features  features.cpp  orb  orb.cpp  readme.txt
OpenVX/: OpenCV-OpenVX_interop.cpp  OpenCV_OpenVX_interop.cpp
Profile/: ORB-SLAM2_block_hotspots.xcf  Profiling_of_ORB-SLAM2.txt  two_hot_threads.csv
Vectorization/: SAXPY.cpp
Visual_SLAM/: opencv_build_josh.sh  pangolin_build_josh.sh  readme.txt
Windows/: readme.txt
(+804 files in other folders)
